--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18.15.0",
+    "npm": "9.5.0"
+  },
   "scripts": {
-    "build":"cd server && npm install && cd ../client && npm install && npm run build",
+    "build": "cd server && npm install  && cd ../client && npm install && npm run build",
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
